--- a/styles.css
+++ b/styles.css
@@ -11,4 +11,9 @@
     height:60px;
     border:1px solid black;
     box-sizing: border-box;
+    
+}
+
+.grid:hover{
+    background-color: black;
 }
